--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>DriveX</title>
-    <link rel="stylesheet" href="src/style/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/style/css/main.css">
 </head>
 <body>
 <header class="header">
@@ -18,7 +21,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 ">
+                    <ul class="navbar-nav mb-2 mb-lg-0 ">
                         <li class="nav-item dropdown header-dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Каталог
@@ -43,11 +46,19 @@
                             <a class="nav-link active" aria-current="page" href="#">Новини</a>
                         </li>
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <input class="form-control me-2 header-form" type="search" placeholder="" aria-label="Search">
+                            <button class="btn " type="submit"><img src="src/img/search.svg" alt="" class="form-search"></button>
                         </form>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Логін</a>
+                            </li>
+                            <li class="nav-item nav-item-registration">
+                                <a class="nav-link-registration" aria-current="page" href="#">Реєстрація</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">UA</a>
+                            </li>
                     </ul>
-
                 </div>
             </div>
         </nav>
