--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Новини</a>
                         </li>
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2 header-form" type="search" placeholder="" aria-label="Search">
+                            <input class="header-form" type="search" placeholder="" aria-label="Search">
                             <button class="btn " type="submit"><img src="src/img/search.svg" alt="" class="form-search"></button>
                         </form>
                             <li class="nav-item">
